--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="assets/datatables/css/jquery.dataTables.css"/>
+	<link rel="stylesheet" type="text/css" href="assets/datatables/css/dataTables.responsive.css"/>
 	<title>D3 Charts for patsnap</title>
 </head>
 <body>
 	<div id="example"></div>
-	<link rel="stylesheet" type="text/css" href="assets/datatables/css/jquery.dataTables.css"/>
 	<script type="text/javascript" src="./dist/psd3.pack.js"></script>
 	<script type="text/javascript" src="./test/table.js"></script>
 </body>
