--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="example"></div>
-	<script type="text/javascript" src="./dist/psd3.pack.js"></script>
+	<script type="text/javascript" src="./dist/seed3.min.js"></script>
 	<script type="text/javascript" src="./test/table.js"></script>
 </body>
 </html>
