--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/datatables/css/jquery.dataTables.css"/>
 	<link rel="stylesheet" type="text/css" href="assets/datatables/css/dataTables.responsive.css"/>
-	<title>D3 Charts for patsnap</title>
+	<title>D3 Charts</title>
 </head>
 <body>
 	<div id="example"></div>
-	<script type="text/javascript" src="./dist/seed3.min.js"></script>
-	<script type="text/javascript" src="./test/treemap.js"></script>
+	<script type="text/javascript" src="./dist/seed3.pack.js"></script>
+	<script type="text/javascript" src="./test/title.js"></script>
 </body>
 </html>
