--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<title>D3 Charts</title>
 </head>
 <body>
-	<div id="example"></div>
+	<div id="example" style="height: 500px;"></div>
+	<button id="change-size" onclick="changeSize();">change size</button>
 	<script type="text/javascript" src="./dist/seed3.pack.js"></script>
 	<script type="text/javascript" src="./test/title.js"></script>
 </body>
